--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 body,
 html {
-    background-color: red;
-    margin: 0px;
-    padding: 0px;
+  background-color: red;
+  margin: 0px;
+  padding: 0px;
 }
-/* h1 {
-    color: pink;
-    background-color: yellow;
-} */
+
+#mytest {
+  color: brown;
+}
