update project details

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,53 @@ html {
   padding: 0px;
 }
 
-#mytest {
-  color: brown;
+#products #cardTitle {
+  line-height: 24px;
+  font-size: 16px;
+  color: #0f1111;
+}
+#products #cardText {
+  overflow: hidden;
+  max-height: 10rem;
+  text-overflow: ellipsis;
+  font-size: 14px;
+  color: #3b4848;
+}
+
+@media (max-width: 991px) {
+  #productDetails {
+    color: yellowgreen;
+    overflow: auto;
+  }
+}
+@media (min-width: 991px) {
+  #productDetails {
+    color: pink;
+    height: 100vh;
+  }
+}
+#productDetails #firstCol {
+  margin-top: 30px;
+}
+@media (max-width: 991px) {
+  #productDetails #firstCol {
+    margin-top: 0px;
+  }
+}
+#productDetails #secondCol {
+  margin-top: 30px;
+}
+@media (max-width: 991px) {
+  #productDetails #secondCol {
+    margin-top: 0px;
+  }
+}
+#productDetails #thirdCol {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+#productDetails #overview {
+  overflow: scroll;
+  max-height: 70vh;
 }
